dev-bkei/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: bkextest
  annotations:   
    cert-manager.io/cluster-issuer: "bke-ci-ucc"
    
spec:
  ingressClassName: traefik
  tls:
  - hosts:
    - dbkeitest.virtorch.brown.edu
    secretName: dbkeitest-tls
  rules:
  - host: dbkeitest.virtorch.brown.edu
    http:
      paths:
      - path: /
        pathType: Exact
        backend:
          service:
            name: bkextest
            port: 
              number: 8080
